<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/refresh_item"
        app:showAsAction="never"
        android:title="@string/refresh"  />
    <item android:id="@+id/settings_item"
        app:showAsAction="never"
        android:title="@string/settings"  />
    <item android:id="@+id/dct_num_item"
        app:showAsAction="never"
        android:title="@string/dct_num"  />


    <item android:id="@+id/placed_item"
        app:showAsAction="never"
        android:title="@string/placed_goods"  />

    <item android:id="@+id/lost_item"
        app:showAsAction="never"
        android:title="@string/lost_goods"  />
    <item android:id="@+id/excessive_item"
        app:showAsAction="never"
        android:title="@string/excessive_goods"  />
    <item android:id="@+id/clear_item"
        app:showAsAction="never"
        android:title="@string/clear_data"  />
</menu>
